--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="initial-scale=1, width=device-width" />
-    <title>Dortea Tadete</title>
+
     <link rel="stylesheet" href="./global.css" />
     <link rel="stylesheet" href="./index.css" />
     <link
@@ -16,12 +16,12 @@
         <section class="university-wrapper">
             <div class="university">
                 <div class="navbar-links">
-                    <div class="home" href="#">Home</div>
+                    <div class="home">Home</div>
                     <a class="about-me" href="#about">About Me</a>
                     <a class="portfolio" href="#portfolio">Portfolio</a>
                     <a class="contact" href="#contact">Contact</a>
                 </div>
-                <section class="frame-parent" id="home">
+                <section class="frame-parent">
                     <div class="hello-parent">
                         <h1 class="hello">HELLO</h1>
                         <img
@@ -41,7 +41,9 @@
                             </section>
                             <div class="frame-container">
                                 <div class="frame">
-                                    <div class="download-cv">Download CV</div>
+                                    <a href="public/CV Dortea Ribka Tadete (3).pdf" download="Dortea_Ribka_Tadete_CV.pdf">
+                                        <div class="download-cv">Download CV</div>
+                                    </a>
                                 </div>
                             </div>
                         </section>
