--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
                     />
 
                     <div class="contact-details">
-                        <u class="dortea-ribka-tadete">Dortea Ribka Tadete | LinkedIn</u>
+                        <u class="dortea-ribka-tadete"><a href="https://www.linkedin.com/in/dortearibkatadete/">Dortea Ribka Tadete | LinkedIn</a></u>
                     </div>
                 </div>
             </div>
