--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                         <div class="grid-item-details-wrapper">
                             <div class="grid-item-details"></div>
                         </div>
-                        <h2 class="porfolio">Porfolio</h2>
+                        <h2 class="porfolio">Portfolio</h2>
                         <div class="call-to-action">
                             <div class="call-to-action-child"></div>
                         </div>
