--- a/index.html
+++ b/index.html
@@ -480,7 +480,7 @@ if ($_SERVER["REQUEST_METHOD"] == "POST") {
           </svg>
         </a>
 
-        <a href="#">
+        <a href="https://www.linkedin.com/in/dortearibkatadete/">
           <svg
             xmlns="http://www.w3.org/2000/svg"
             width="20"
