--- a/index.html
+++ b/index.html
@@ -506,7 +506,7 @@ if ($_SERVER["REQUEST_METHOD"] == "POST") {
           </svg>
         </a>
 
-        <a href="#">
+        <a href="https://github.com/dortearibka">
           <svg
             xmlns="http://www.w3.org/2000/svg"
             width="20"
