--- a/index.html
+++ b/index.html
@@ -493,7 +493,7 @@ if ($_SERVER["REQUEST_METHOD"] == "POST") {
           </svg>
         </a>
 
-        <a href="#">
+        <a href="/">
           <svg
             xmlns="http://www.w3.org/2000/svg"
             width="20"
