--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <div class="main-container">
         <div class="nav">
           <div class="logo">
-            <a href="/">DRT</a>
+            <a href="https://www.flaticon.com/free-stickers/pencil" title="pencil stickers">Pencil stickers created by Stickers - Flaticon</a>"></a>
           </div>
 
           <nav>
