--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <div class="main-container">
         <div class="nav">
           <div class="logo">
-            <a href="https://www.flaticon.com/free-stickers/creativity" title="creativity stickers"></a>
+            <img src="/images/programmer (1).png"/>
           </div>
 
           <nav>
