--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <div class="main-container">
         <div class="nav">
           <div class="logo">
-            <img src="/images/programmer (1).png"/>
+              <img src="/images/programmer (1).png" alt="logo">
           </div>
 
           <nav>
