--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles/style.css" />
     <link rel="stylesheet" href="styles/responsive.css" />
+    <link rel="icon" type="icon" href="/images/css-code_2147809.png">
     <title>Portfolio - Dortea Tadete</title>
   </head>
   <body>
@@ -13,7 +14,7 @@
       <div class="main-container">
         <div class="nav">
           <div class="logo">
-              <img src="/images/programmer (1).png" alt="logo">
+              <img src="/images/css-code_2147809.png" alt="logo">
           </div>
 
           <nav>
